syntax = "proto3";

package bnet;

option java_package = "net.bestia.bnet.proto";
option java_outer_classname = "AccountProto";

message Account {
    int64 id = 1;
    string name = 2;
    int64 active_entity = 3;
}